# ACE-Router

./: .gitignore  README.md
AceRouter/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
AceRouter/mcpuniverse/agent/: __init__.py  base.py  dynamic_react.py  manager.py  utils.py
AceRouter/mcpuniverse/agent/configs/: dynamic_react_prompt.j2
AceRouter/mcpuniverse/agent/router/: __init__.py  config.py  history.py  response_parser.py  tool_router.py
AceRouter/mcpuniverse/agent/router/backends/: __init__.py  base.py  embedding.py  llm.py
AceRouter/mcpuniverse/agent/router/prompts/: router_system_multi.j2  router_system_single.j2  router_user_no_history.j2  router_user_with_history.j2
AceRouter/mcpuniverse/benchmark/: runner.py  task.py
AceRouter/mcpuniverse/benchmark/mcpmark/configs/: mcpmark_filesystem.yaml  mcpmark_filesystem_dynamic_react.yaml  mcpmark_github.yaml  mcpmark_notion.yaml  mcpmark_playwright.yaml  mcpmark_playwright_webarena.yaml  mcpmark_postgres.yaml
AceRouter/mcpuniverse/benchmark/mcpuniverse/configs/: 3d_design.yaml  browser_automation.yaml  financial_analysis.yaml  location_navigation.yaml  multi_server.yaml  repository_management.yaml  smoke_dynamic_react.yaml  web_search.yaml
AceRouter/mcpuniverse/evaluator/: __init__.py
AceRouter/mcpuniverse/evaluator/deepresearch/: functions.py
AceRouter/mcpuniverse/llm/: __init__.py  base.py  gemini.py  local_llm.py  openai.py  openrouter.py
AceRouter/mcpuniverse/mcp/: client.py  config.py  manager.py
AceRouter/mcpuniverse/mcp/configs/: server_list.json
AceRouter/mcpuniverse/mcp/servers/jina_scrape_llm_summary/: server.py
AceRouter/mcpuniverse/mcp/servers/python_code_sandbox/: __main__.py  server.py
AceRouter/mcpuniverse/mcp/servers/serper_search/: server.py  utils.py
AceRouter/mcpuniverse/workflows/: __init__.py
AceRouter/scripts/: run_dynamic_react_smoke.py
AceRouter/tests/agent/: test_agent_manager.py  test_dynamic_react.py
AceRouter/tests/agent/router/: test_history_formatter.py  test_response_parser.py  test_tool_router.py
AceRouter/tests/benchmark/: test_dynamic_react_smoke.py
AceRouter/tests/mcp/: test_client.py
AceRouter/tests/mcp/servers/jina_scrape/: test_jina_scrape_llm_summary.py
AceRouter/tests/mcp/servers/python_code_sandbox/: test_python_code_sandbox.py
AceRouter/tests/mcp/servers/serper_search/: test_serper_search.py
docs/: index.html
