[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcpuniverse"
version = "1.1.3"
authors = [
    {name = "Salesforce Research"}
]
description = "A framework for developing and benchmarking AI agents using Model Context Protocol (MCP)"
readme = "README.md"
license = {text = "Apache 2.0"}
keywords = [
    "AI",
    "Agents",
    "MCP",
    "benchmarking",
    "LLM",
    "machine-learning"
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10,<4"
dependencies = [
    "requests==2.32.4",
    "pydantic==2.11.7",
    "pydantic[email]==2.11.7",
    "mcp==1.13.1",
    "httpx==0.28.1",
    "click==8.1.8",
    "jinja2==3.1.6",
    "python-dotenv==1.0.1",
    "anyio==4.9.0",
    "openai==1.106.1",
    "anthropic==0.49.0",
    "mistralai==1.6.0",
    "pyyaml==6.0.2",
    "google-genai==1.16.1",
    "redis==6.1.0",
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "bcrypt==4.3.0",
    "pyseto==1.8.4",
    "celery==5.5.3",
    "xai-sdk==1.0.0",
    "claude-code-sdk==0.0.20",
    "openai-agents==0.2.11",
    "wikipedia-api==0.8.1",
    "mcp_server_fetch",
    "google-auth==2.38.0",
    "google-auth-oauthlib==1.2.1",
    "google-api-python-client",
    "mcp_server_calculator==0.1.1",
    "yfinance==0.2.61",
    "blender-mcp==1.1.3",
    "playwright==1.52.0",
    "mathutils==3.3.0",
    "pytz==2024.2",
    "tiktoken==0.11.0",
    "kafka-python==2.2.15",
    "pika==1.3.2",
    "tenacity==9.1.2",
    "loguru==0.7.3",
    "aiohttp>=3.9.0",
    "omegaconf>=2.3.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "notion-client==2.7.0",
    "sqlalchemy[asyncio]==2.0.41"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-postgresql",
    "pylint",
    "pre-commit",
]
web = [
    "uvicorn[standard]==0.34.0",
    "fastapi==0.115.12",
    "celery==5.5.3",
    "redis==6.1.0",
    "psycopg[binary]==3.2.9",
    "sqlalchemy[asyncio]==2.0.41",
]
dashboard = [
    "gradio>=5.42.0",
]
deep-research = [
    "pillow==12.1.0",
    "datasets==4.5.0",
    "openpyxl==3.1.5",
    "vertexai==1.71.1",
]
vllm = [
    "vllm>=0.15.0",
    "ray>=2.0.0",
    "flash-attn>=2.7.0",
    "torch>=2.6.0",
    "nest_asyncio>=1.5.0",
]
sglang = [
    "sglang>=0.4.0",
    "ray>=2.0.0",
    "flash-attn>=2.7.0",
    "torch>=2.6.0",
]
rl = [
    "verl @ git+https://github.com/verl-project/verl.git@9433f8a8f2771256ea4f8f94e4401bcfe9703228",
    "torch>=2.6.0",
    "ray>=2.0.0",
    "tensordict>=0.6.0",
    "hydra-core>=1.3.0",
    "tqdm>=4.60.0",
    "transformers>=4.40.0",
    "numpy>=1.24.0",
    "accelerate>=1.0.0",
    "peft>=0.10.0",
    "wandb>=0.15.0",
    "datasets>=4.0.0",
]
# System dependency: Node.js/npx is required for some MCP servers
# (google-maps, slack, notion, postgres, etc.)
# Install via: conda install -c conda-forge nodejs
#          or: apt-get install nodejs npm


[project.urls]
Homepage = "https://github.com/SalesforceAIResearch/MCP-Universe"
Repository = "https://github.com/SalesforceAIResearch/MCP-Universe"

[tool.setuptools.package-dir]
mcpuniverse = "mcpuniverse"

[tool.setuptools.packages.find]
include = ["mcpuniverse*"]

[tool.setuptools.package-data]
mcpuniverse = [
    "agent/configs/*",
    "mcp/configs/*"
]
